# wgpu-py

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml  codegen-script.py  conftest.py  dev-requirements.txt  download-wgpu-native.py  make-dsl.py  pyproject.toml  setup.cfg  setup.py  test-spirv.py  test-vis.py  test-wgpu.py
.github/: CODEOWNERS  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  other.md  update-wgpu.md
.github/workflows/: cd.yml  ci.yml  cix.yml  screenshots.yml
codegen/: README.md  __init__.py  __main__.py  apipatcher.py  apiwriter.py  apiwritersimple.py  files.py  hparser.py  idlparser.py  jswriter.py  rsbackend.py  rspatcher.py  utils.py  wgpu_native_patcher.py
codegen/tests/: test_codegen_apipatcher.py  test_codegen_result.py  test_codegen_rspatcher.py  test_codegen_utils.py  test_codegen_z.py
docs/: advanced.rst  backends.rst  conf.py  gui.rst  guide.rst  index.rst  reference.rst  reference_classes.rst  reference_gui.rst  reference_utils.rst  reference_wgpu.rst  start.rst  utils.rst  wgpu.rst  wgpu_enums.rst  wgpu_flags.rst  wgpu_structs.rst
docs/_static/: _pyodide_iframe.html  style.css
docs/_templates/: wgpu_class_layout.rst
examples/: README.md  README.rst  browser.html  compute_int64.py  compute_matmul.py  compute_noop.py  compute_textures.py  compute_timestamps.py  compute_workgroups.py  cube.py  cube_glfw.py  events.py  example_glfw.py  extras_debug.py  extras_dxc.py  fpl_example.py  gui_asyncio.py  gui_auto.py  gui_demo.py  gui_direct.py  gui_direct2.py  gui_events.py  gui_glfw.py  gui_multiple.py  gui_qt.py  gui_qt_asyncio.py  gui_qt_embed.py  gui_sdl3.py  gui_subprocess.py  gui_threading.py  gui_trio.py  gui_wx.py  gui_wx_embed.py  imgui_backend_sea.py  imgui_basic_example.py  imgui_cmap_picker.py  imgui_multi_canvas.py  imgui_renderer_sea.py  manual_glfw.py  matmul_simple.wgsl  (+44 more)
examples/tests/: test_examples.py  testutils.py
exp/: bytecode.py  bytecode_vs_ast.py  bytecode_vs_ast2.py  glsl_spirv_examples.py  shader-syntax.py
py2spirv/: __init__.py  _compiler.py  _compiler_ast.py  _compiler_bytecode.py  _compiler_glsl.py  _compiler_pyast.py  _compiler_pybc.py  _compiler_pybytecode.py  _compiler_raw.py  _compiler_wasl.py  _dis.py  _generator_base.py  _generator_bc.py  _module.py  _spirv_constants.py  _types.py  commonast.py  compiler.py  test-spirv.py
py2spirv/codegen/: dis.js  gen_dis.py  gen_spirv_constants.py  spirv.py
tests/: renderutils.py  test_api.py  test_async.py  test_buffer_mapping.py  test_canvas.py  test_codegen.py  test_codegen_result.py  test_codegen_utils.py  test_compute.py  test_diagnostics.py  test_events.py  test_examples.py  test_gui_auto_offscreen.py  test_gui_base.py  test_gui_events.py  test_gui_glfw.py  test_gui_offscreen.py  test_gui_scheduling.py  test_gui_utils.py  test_not_finite.py  test_render.py  test_rs_basics.py  test_rs_buffer.py  test_rs_compute_tex.py  test_rs_render.py  test_rs_render_tex.py  test_rs_texture.py  test_set_constant.py  test_set_immediates.py  test_set_override.py  test_texture.py  test_util_compute.py  test_util_core.py  test_util_default_device.py  test_util_shadertoy.py  test_wgpu_error_fatal.py  test_wgpu_native_basics.py  test_wgpu_native_buffer.py  test_wgpu_native_compute_tex.py  test_wgpu_native_errors.py  (+11 more)
tests_mem/: test_destroy.py  test_gui.py  test_gui_glfw.py  test_gui_offscreen.py  test_gui_qt.py  test_mem.py  test_meta.py  test_object_retention.py  test_objects.py  testutils.py
tools/: build_all_wheels.py  download_dxc.py  download_wgpu_native.py  hatch_build.py
visvis2/: __init__.py  _figure.py  _renderer.py  _view.py
visvis2/goovi/: __init__.py  _core.py  _data.py  _device.py  _instance.py  _pipeline.py  _surface.py  _surface_glfw.py
visvis2/gpuapi/: __init__.py  _core.py  _device.py  _instance.py  _surface.py  _surface_glfw.py
visvis2/objects/: __init__.py  _base.py  _triangle.py
visvis2/spirv/: __init__.py  _spirv_constants.py  _spirv_khronos.py  commonast.py  compiler.py
webgpu/: _gen.py  test_triangle.py  utils.py  wgpu.py  wgpu_ctypes.py  wgpu_ffi.py  wgpu_gl.py
wgpu/: README.md  __init__.py  _api.py  _async.py  _canvas.py  _classes.py  _compute.py  _constants.py  _coreutils.py  _diagnostics.py  _gen.py  _mappings.py  _parsers.py  _structs.py  _version.py  base.py  bitmapping in classes.py  classes.py  codegen-script.py  enums.py  flags.py  js.py  rs.py  structs.py  utils.py  vk.py  wgpu.py  wgpu_ctypes.py  wgpu_ffi.py
wgpu/__pyinstaller/: conftest.py  hook-wgpu.py  test_wgpu.py
wgpu/backend/: __init__.py  js.py  rs.py
wgpu/backends/: __init__.py  auto.py  js.py  rs.py  rs_ffi.py  rs_helpers.py  rs_mappings.py
wgpu/backends/js_webgpu/: __init__.py  _api.py  _helpers.py  _implementation.py
wgpu/backends/wgpu_native/: __init__.py  _api.py  _ffi.py  _helpers.py  _mappings.py  _poller.py  extras.py
wgpu/codegen/: README.md  __main__.py  apiwriter.py  basewriter.py  idlparser.py  utils.py
wgpu/gui/: __init__.py  _events.py  _gui_utils.py  _loop.py  _offscreen.py  asyncio.py  auto.py  base.py  events.py  flexx.py  glfw.py  jupyter.py  loop.py  offscreen.py  qt.py  tk.py  trio.py  wx.py  wxpython.py
wgpu/gui/auto/: __init__.py  qt.py
wgpu/resources/: __init__.py  codegen_report.md  codegen_report.txt  combined_header.h  commit-sha  webgpu.h  webgpu.idl  wgpu.h  wgpu_native-version
wgpu/utils/: __init__.py  _compute.py  _device.py  compute.py  device.py  glfw_present_info.py  imgui_backend.py  imgui_renderer.py  shadertoy.py
wgpu/utils/imgui/: __init__.py  imgui_backend.py  imgui_renderer.py  stats.py
