# ===== Project info

[project]
dynamic = ["version"]
name = "wgpu"
description = "WebGPU for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Almar Klein" }, { name = "Korijn van Golen" }]
keywords = ["webgpu", "wgpu", "vulkan", "metal", "DX12", "opengl"]
requires-python = ">= 3.8"
dependencies = ["cffi>=1.15.0", "rubicon-objc>=0.4.1; sys_platform == 'darwin'"]

[project.optional-dependencies]
# For users
jupyter = ["jupyter_rfb>=0.4.2"]
glfw = ["glfw>=1.9"]
imgui = ["imgui-bundle>=1.2.1"]
# For devs / ci
build = ["build", "hatchling", "requests", "twine"]
codegen = ["pytest", "numpy", "black"]
lint = ["black", "flake8", "flake8-black", "pep8-naming"]
docs = ["sphinx>7.2", "sphinx_rtd_theme"]
tests = ["numpy", "pytest", "psutil", "imageio"]
examples = []
dev = ["wgpu[build,codegen,lint,docs,tests,examples]"]

[project.entry-points."pyinstaller40"]
hook-dirs = "wgpu.__pyinstaller:get_hook_dirs"
tests = "wgpu.__pyinstaller:get_test_dirs"

[project.urls]
Homepage = "https://github.com/pygfx/wgpu-py"
Documentation = "https://wgpu-py.readthedocs.io"
Repository = "https://github.com/pygfx/wgpu-py"

# ===== Building
#
# There are a variety of build backends, e.g.:
# * setuptools: need this if you have a setup.py
# * flit: really nice for pure Python libs.
# * hatchling: modern, with pretty good defaults, and configurable. Just right for us!
# * mesonpy: numpy, scikit-image, et al. use this because they compile stuff.

[build-system]
requires = ["requests", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "wgpu/__init__.py"

[tool.hatch.build.targets.sdist]
packages = ["wgpu"]
exclude = ["*.so", "*.dll", "*.dylib"]

[tool.hatch.build.targets.wheel]
packages = ["wgpu"]
artifacts = ["*.so", "*.dll", "*.dylib"]

# We use a hatch build hook to install the correct wgpu-native lib right before
# the wheel is build, and to allow cross-platform builds. See the tools dir.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "tools/hatch_build.py"

# ===== Tooling
